more gird schema corrections
